--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "tabler-icons-react": "^1.56.0"
     },
     "devDependencies": {
+        "@types/js-cookie": "^3.0.3",
         "@types/node": "^18.15.13",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
@@ -33,6 +34,7 @@
         "eslint": "^8.38.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
+        "js-cookie": "^3.0.5",
         "typescript": "^5.0.2",
         "vite": "^4.3.0"
     }
